# uab-medicine-infographic-generator

./: .copier-answers.common.yml  .copier-answers.fastapi.yml  .dockerignore  .env.example  .env.production.example  .env.txt  .gitignore  AGENTS.md  AZURE_IMAGE_FINDINGS.md  CHANGELOG.md  CHATGPT_STEP_BY_STEP_PROMPTS.md  Dockerfile  PROMPT_PLACEHOLDER_REDUCTION_NOTES.md  README.md  SPEC.md  debug_test.py  direct_testprompt_response.json  docker-compose.prod.yml  docker-compose.yml  generate_style_examples.py  infographic_app.py  mkdocs.yml  output.txt  pyproject.toml  requirements.txt  simple_check.py  simple_test.py  streamlit_app.py  test_azure.py  test_azure_image_comprehensive.py  test_image.py  testprompt.txt
.devcontainer/: devcontainer.json
.github/workflows/: security-scan.yml
.kilocode/rules/: azure_ready_fastapi.md  azure_ready_gradio.md  coding_standard.md  gradio_style_guide.md  test_style_guide.md
.streamlit/: config.toml
Docker/: startup.sh
app/: fastapi_config.py  server.py
app/v01/: schemas.py  tab1.py  tab2.py  (+1 more)
deploy/: Dockerfile
docs/: index.md  infographic_streamlit_app.md  src_setup.sh  uab-comms-infographic-deployment-plan.md  uab-comms-server.md
frontend/: Api.py  infographic_ui.py
hooks/: post_gen_init.sh
infographic/: __init__.py  audit.py  charts.py  cleanup.py  constants.py  image_service.py  parsers.py  prompts.py  sample_handler.py  sanitize.py  styles.py  ui.py
tests/: testing_import.py
uab_app/: __init__.py  charts.py  cleanup.py  constants.py  image_service.py  parsers.py  prompts.py  sanitize.py  styles.py  ui.py
(+9 files in other folders)
